<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:padding="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:paddingBottom="30dp"
		android:gravity="center_horizontal"
		android:textSize="25sp"
        android:text="@string/hello"
		android:id="@+id/textView" />
	
	<Button
		android:id="@+id/enable"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/Base.Widget.AppCompat.Button.Borderless"
		android:textSize="20sp"
		android:text="@string/enable"
		android:layout_below="@+id/textView"
		android:layout_alignParentStart="true" />
	
	<Button
		android:id="@+id/reboot"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		style="@style/Base.Widget.AppCompat.Button.Borderless"
		android:textSize="20sp"
		android:text="@string/reboot_requires_root"
		android:layout_alignParentStart="true"
		android:layout_below="@+id/enable"
		android:layout_alignParentLeft="true" />
	
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingTop="40dp"
		android:text="@string/note_you_do_not_need_this_app_installed_to_keep_the_percent_after_a_reboot"
		android:layout_below="@+id/reboot"
		android:layout_alignParentStart="true" />

	<com.google.android.gms.ads.AdView
		android:id="@+id/adView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_alignParentBottom="true"
		ads:adSize="BANNER"
		ads:adUnitId="@string/banner_ad_unit_id">
	</com.google.android.gms.ads.AdView>

</RelativeLayout>
